<fix> fix tasks overlap problem while meeting

--- a/src/index.css
+++ b/src/index.css
@@ -102,10 +102,6 @@
   background-color: transparent;
 }
 
-.list {
-  max-height: 70vh;
-  overflow: auto;
-}
 
 .list-title {
   font-size: 1.5rem;
